--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div><img src="./icon/search.png" height="25mm" alt="">&nbsp &nbspSearch</div>
         <div><img src="./icon/lib.webp" height="25mm" alt="">&nbsp &nbspYour Library</div>
         <div><img src="./icon/create.png" height="25mm" alt="">&nbsp &nbspCreate Playlist</div>
-        <div><img src="./icon/fav.webp" height="25mm" alt="">&nbsp &nbspLiked Songs</div>
+        <div><i class="fa-solid fa-heart fa-2xl"></i>&nbsp &nbspLiked Songs</div>
 
     </div>
     <footer class="left-footer">
